# Chess

./: .gitignore  CMakeLists.txt  README.md
include/: GameController.hpp  GameUI.hpp  Piece.hpp  Square.hpp  gameController.hpp  gameUI.hpp  piece.hpp  square.hpp
include/controller/: GameController.hpp
include/model/: Board.hpp  BoardCoordinate.hpp  GameState.hpp  Piece.hpp  PieceColor.hpp  PieceType.hpp
src/: GameController.cpp  GameUI.cpp  Piece.cpp  Square.cpp  gameController.cpp  gameUI.cpp  main.cpp  piece.cpp  square.cpp
src/controller/: GameController.cpp
src/model/: Board.cpp  BoardCoordinate.cpp  GameState.cpp  Piece.cpp
